# similarity-search

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  search.py
sis/: cfg.py  com.py  datamgmt.py
